--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -22,8 +22,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :birthday %>
-    <%= form.date_select :birthday %>
+    <%= form.label :birthdate %>
+    <%= form.date_select :birthdate %>
   </div>
 
   <div class="actions">
