--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -11,8 +11,8 @@
 </p>
 
 <p>
-  <strong>Birthday:</strong>
-  <%= @student.birthday %>
+  <strong>Birthdate:</strong>
+  <%= @student.birthdate %>
 </p>
 
 <%= link_to 'Edit', edit_student_path(@student) %> |
