--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -7,7 +7,7 @@
     <tr>
       <th>Name</th>
       <th>Last name</th>
-      <th>Birthday</th>
+      <th>Birthdate</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -17,7 +17,7 @@
       <tr>
         <td><%= student.name %></td>
         <td><%= student.last_name %></td>
-        <td><%= student.birthday %></td>
+        <td><%= student.birthdate %></td>
         <td><%= link_to 'Show', student %></td>
         <td><%= link_to 'Edit', edit_student_path(student) %></td>
         <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
